<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.menu.main.profile.ProfileFragment"
    android:background="@color/colorPrimary">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_centerHorizontal="true"
        android:id="@+id/text_profile"
        android:layout_marginTop="25dp"
        android:textSize="35sp"
        android:text="@string/profile"
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:layout_below="@id/text_profile"
        android:layout_marginBottom="50sp"
        android:id="@+id/imgProfile"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/image1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/deskripsi_gambar" />

    <TextView
        android:layout_below="@id/imgProfile"
        android:id="@+id/txtNim"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="60dp"
        android:textSize="20sp"
        android:text="@string/nim"
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_below="@id/txtNim"
        android:id="@+id/txtNama"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="60dp"
        android:textSize="20sp"
        android:text="@string/nama"
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_below="@id/txtNama"
        android:id="@+id/txtKelas"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="60dp"
        android:textSize="20sp"
        android:text="@string/kelas"
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_below="@id/txtKelas"
        android:id="@+id/txtDeskripsi"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="60dp"
        android:textSize="20sp"
        android:text="@string/deskripsi"
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/txt1"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="50dp"
        android:layout_toEndOf="@id/txtNim"
        android:layout_below="@id/imgProfile"
        android:textSize="20sp"
        android:text="@string/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginBottom="5dp"
        android:id="@+id/txt2"
        android:layout_marginStart="35dp"
        android:layout_toEndOf="@id/txtNama"
        android:layout_below="@id/txt1"
        android:textSize="20sp"
        android:text="@string/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt3"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="40dp"
        android:layout_toEndOf="@id/txtKelas"
        android:layout_below="@id/txt2"
        android:textSize="20sp"
        android:text="@string/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt4"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="7dp"
        android:layout_toEndOf="@id/txtDeskripsi"
        android:layout_below="@id/txt3"
        android:textSize="20sp"
        android:text="@string/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginBottom="5dp"
        android:layout_marginStart="6dp"
        android:id="@+id/txtNim2"
        android:layout_below="@id/imgProfile"
        android:layout_toEndOf="@id/txt1"
        android:textSize="20sp"
        android:text="@string/nim2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginBottom="5dp"
        android:layout_marginStart="6dp"
        android:id="@+id/txtNama2"
        android:layout_below="@id/txtNim2"
        android:layout_toEndOf="@id/txt2"
        android:textSize="20sp"
        android:text="@string/nama2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginBottom="5dp"
        android:layout_marginStart="6dp"
        android:id="@+id/txtKelas2"
        android:layout_below="@id/txtNama2"
        android:layout_toEndOf="@id/txt3"
        android:textSize="20sp"
        android:text="@string/kelas2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginBottom="5dp"
        android:layout_marginStart="6dp"
        android:id="@+id/txtDeskripsi2"
        android:layout_below="@id/txtKelas2"
        android:layout_toEndOf="@id/txt4"
        android:textSize="20sp"
        android:text="@string/deskripsi2"
        android:layout_width="230dp"
        android:layout_height="200dp" />
</RelativeLayout>